Fix sidebar broken in Firefox 133

--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -35,7 +35,7 @@ html:not([privatebrowsingmode="temporary"]) #sidebar-box{
   min-width: var(--uc-sidebar-width) !important;
   width: var(--uc-sidebar-width) !important;
   max-width: var(--uc-sidebar-width) !important;
-  z-index:1;
+  z-index:3;
 }
 
 html:not([privatebrowsingmode="temporary"]) #main-window[sizemode="fullscreen"] #sidebar-box{ --uc-sidebar-width: 1px; }
